# esp32-uart-eui

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/electricui-embedded/: CMakeLists.txt  component.mk
main/: main.c
